# info_segugio_assistant

./: .env  .gitignore  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
public/: app.css  theme.json
src/: prompts.py
src/info_segugio_assistant/: __init__.py  config.py
