[project]
name = "info-segugio-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Debora Campopiano",email = "programmazione2023@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0.0,>=3.10"
dependencies = [
    "chainlit (>=2.5.5,<3.0.0)",
    "openai (>=1.84.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "info_segugio_assistant", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
